# mxnet-Cpp-Deployment-Wrapper-Demo

./: CMakeLists.txt  Makefile  Readme.md  main.cpp  mx_model.cc  mx_model.h
MXNet-v0.11.0/: mxnet_predict-all.cc
